fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Has_operator_placed_EZ_IO_before__c.field-meta.xml
<CustomField>
    <fullName>Has_operator_placed_EZ_IO_before__c</fullName>
    <inlineHelpText>Has operator used driver before?</inlineHelpText>
    <label>Has operator used driver before?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>