fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <inlineHelpText>Quotes, IN, or Inches all can be used.</inlineHelpText>
    <label>Height</label>
    <length>50</length>
    <type>Text</type>
</CustomField>