fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/How_long_was_the_delay_interruption__c.field-meta.xml
<CustomField>
    <fullName>How_long_was_the_delay_interruption__c</fullName>
    <description>Used in Cardiac Complaint Form</description>
    <label>How long was the delay/interruption?</label>
    <length>15</length>
    <type>Text</type>
</CustomField>