fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/How_many_uses__c.field-meta.xml
<CustomField>
    <fullName>How_many_uses__c</fullName>
    <label>How many uses? (LMA Reusable Only)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>