fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/How_the_product_was_being_used__c.field-meta.xml
<CustomField>
    <fullName>How_the_product_was_being_used__c</fullName>
    <description>Indicate how the product was being used when the alleged defect or event was discovered or encountered.</description>
    <inlineHelpText>Indicate how the product was being used when the alleged defect or event was discovered or encountered.</inlineHelpText>
    <label>How the product was being used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>During use on a patient</fullName>
            </value>
            <value>
                <fullName>Prior to Use -In Clinical Setting</fullName>
            </value>
            <value>
                <fullName>Prior to Use - Non-Clinical Setting</fullName>
            </value>
            <value>
                <fullName>During incoming inspection/inventory review, product training/demonstration</fullName>
            </value>
            <value>
                <fullName>Unknown at this time</fullName>
            </value>
            <value>
                <fullName>During post cleaning/reprocessing inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>