fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/How_was_the_issue_resolved__c.field-meta.xml
<CustomField>
    <fullName>How_was_the_issue_resolved__c</fullName>
    <description>Used in Cardiac Complaint Form</description>
    <label>How was the issue resolved?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>