fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/If_insertion_s_were_successful_how_was__c.field-meta.xml
<CustomField>
    <fullName>If_insertion_s_were_successful_how_was__c</fullName>
    <inlineHelpText>REQUIRED for this Section: If insertion(s) were successful how was the device secured? E.g. If proximal humerus site how was arm secured</inlineHelpText>
    <label>If successful how was the device secure?</label>
    <type>TextArea</type>
</CustomField>