fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/If_no_who_made_the_medical_judgement__c.field-meta.xml
<CustomField>
    <fullName>If_no_who_made_the_medical_judgement__c</fullName>
    <description>Used in Cardiac Complaint Form</description>
    <label>If no, who made the medical judgement?</label>
    <type>TextArea</type>
</CustomField>