fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/If_no_why_not__c.field-meta.xml
<CustomField>
    <fullName>If_no_why_not__c</fullName>
    <description>Used in Cardiac Complaint Form</description>
    <label>If no, why not?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>