fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/If_not_what_was_the_new_insertion_site__c.field-meta.xml
<CustomField>
    <fullName>If_not_what_was_the_new_insertion_site__c</fullName>
    <label>If not, what was the new insertion site?</label>
    <type>TextArea</type>
</CustomField>