fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/If_yes_how_often_was_the_product_used__c.field-meta.xml
<CustomField>
    <fullName>If_yes_how_often_was_the_product_used__c</fullName>
    <inlineHelpText>If re-sterilized/reprocessed, how often was the product used prior to alleged issue? This field is required if you answer yes to prior question.</inlineHelpText>
    <label>If yes, how often was the product used?</label>
    <type>TextArea</type>
</CustomField>