fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/If_yes_state_basis_for_conclusion__c.field-meta.xml
<CustomField>
    <fullName>If_yes_state_basis_for_conclusion__c</fullName>
    <description>Used in Cardiac Complaint Form</description>
    <label>If yes, state basis for conclusion</label>
    <type>TextArea</type>
</CustomField>