fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/If_yes_was_the_same_insertion_site_used__c.field-meta.xml
<CustomField>
    <fullName>If_yes_was_the_same_insertion_site_used__c</fullName>
    <description>Used in Cardiac Complaint Form</description>
    <label>If yes was the same insertion site used?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>