fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/In_yellow_or_black_hard_case__c.field-meta.xml
<CustomField>
    <fullName>In_yellow_or_black_hard_case__c</fullName>
    <label>In yellow or black hard case?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>