fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Index_Device__c.field-meta.xml
<CustomField>
    <fullName>Index_Device__c</fullName>
    <description>Field added for Manta Complaint Process.</description>
    <label>Index Device</label>
    <length>255</length>
    <type>Text</type>
</CustomField>