fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Indication_for_Use__c.field-meta.xml
<CustomField>
    <fullName>Indication_for_Use__c</fullName>
    <description>Used in Cardiac Complaint Form</description>
    <label>Indication for Use</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>