fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Infectious_Disease_Type__c.field-meta.xml
<CustomField>
    <fullName>Infectious_Disease_Type__c</fullName>
    <inlineHelpText>COVID</inlineHelpText>
    <label>Infectious Disease Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>