fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Insertion_site_involved_during_issue__c.field-meta.xml
<CustomField>
    <fullName>Insertion_site_involved_during_issue__c</fullName>
    <label>Insertion site involved during issue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proximal Humerus</fullName>
            </value>
            <value>
                <fullName>Proximal Tibia</fullName>
            </value>
            <value>
                <fullName>Distal Femur</fullName>
            </value>
            <value>
                <fullName>Distal Tibia</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>