fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Internal_Reference__c.field-meta.xml
<CustomField>
    <fullName>Internal_Reference__c</fullName>
    <label>Internal Reference #</label>
    <length>64</length>
    <type>Text</type>
</CustomField>