fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/INTV_Complaint_Check__c.field-meta.xml
<CustomField>
    <fullName>INTV_Complaint_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>INTV Complaint Check</label>
    <type>Checkbox</type>
</CustomField>