fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/INTV_Date_Time_Check__c.field-meta.xml
<CustomField>
    <fullName>INTV_Date_Time_Check__c</fullName>
    <formula>NOW() - 0.010416667</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>INTV Date Time Check</label>
    <type>DateTime</type>
</CustomField>