fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Is_operator_aware_a_manual_placement__c.field-meta.xml
<CustomField>
    <fullName>Is_operator_aware_a_manual_placement__c</fullName>
    <inlineHelpText>REQUIRED for this Section: Is operator aware a manual placement can be achieved?</inlineHelpText>
    <label>Is operator aware of manual placement?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>