fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Is_the_complaint_related_to__c.field-meta.xml
<CustomField>
    <fullName>Is_the_complaint_related_to__c</fullName>
    <label>Is the complaint related to?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AC Power Cord</fullName>
            </value>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>DLX</fullName>
            </value>
            <value>
                <fullName>ECG Cable</fullName>
            </value>
            <value>
                <fullName>ECG Patient Cable</fullName>
            </value>
            <value>
                <fullName>ECG Snap Leads</fullName>
            </value>
            <value>
                <fullName>G4/Flybook</fullName>
                <label>G4</label>
            </value>
            <value>
                <fullName>Power Supply</fullName>
            </value>
            <value>
                <fullName>Printer</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Rhythm</fullName>
            </value>
            <value>
                <fullName>Stylet</fullName>
            </value>
            <value>
                <fullName>Stylet Extension Cable</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>T-Piece</fullName>
            </value>
            <value>
                <fullName>Ultrasound Probe</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>USB Cable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>