fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Is_this_complaint_regarding_VPS_Consoles__c.field-meta.xml
<CustomField>
    <fullName>Is_this_complaint_regarding_VPS_Consoles__c</fullName>
    <label>Is this complaint regarding VPS Consoles</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>