fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Is_X_ray_available_for_review__c.field-meta.xml
<CustomField>
    <fullName>Is_X_ray_available_for_review__c</fullName>
    <label>Is X-ray available for review?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>