fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Issue_Incident_Description__c.field-meta.xml
<CustomField>
    <fullName>Issue_Incident_Description__c</fullName>
    <description>Describe the alleged quality issue/incident in DETAIL (Explain who, what, where, when, how)</description>
    <inlineHelpText>Describe the alleged quality issue/incident in DETAIL (Explain who, what, where, when, how)</inlineHelpText>
    <label>Issue/Incident Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>