fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/LastModifiedByEmail__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedByEmail__c</fullName>
    <formula>LastModifiedBy.Email</formula>
    <label>LastModifiedByEmail</label>
    <type>Text</type>
</CustomField>