fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/LastRejectedBy__c.field-meta.xml
<CustomField>
    <fullName>LastRejectedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LastRejectedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Complaints1</relationshipName>
    <type>Lookup</type>
</CustomField>