fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/LastRejectedBYEmail__c.field-meta.xml
<CustomField>
    <fullName>LastRejectedBYEmail__c</fullName>
    <formula>LastRejectedBy__r.Email</formula>
    <label>LastRejectedBYEmail</label>
    <type>Text</type>
</CustomField>