fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/LastRejectedByPhone__c.field-meta.xml
<CustomField>
    <fullName>LastRejectedByPhone__c</fullName>
    <formula>LastRejectedBy__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastRejectedByPhone</label>
    <type>Text</type>
</CustomField>