fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Length_of_time_in_use_prior_to_event__c.field-meta.xml
<CustomField>
    <fullName>Length_of_time_in_use_prior_to_event__c</fullName>
    <description>Used in Cardiac Complaint Form</description>
    <label>Length of time in use prior to event</label>
    <length>15</length>
    <type>Text</type>
</CustomField>