fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Leur_lock_syringe__c.field-meta.xml
<CustomField>
    <fullName>Leur_lock_syringe__c</fullName>
    <inlineHelpText>Was a leur-lock syringe proplerly screwed to catheter</inlineHelpText>
    <label>Luer-lock syringe properly screwed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>