fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/List_error_messages_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>List_error_messages_if_applicable__c</fullName>
    <label>List error messages (if applicable)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DAM Module</fullName>
                <label>DAM Error</label>
            </value>
            <value>
                <fullName>ECG Short</fullName>
                <label>ECG Short Error</label>
            </value>
            <value>
                <fullName>10V Dropout</fullName>
                <label>10V Dropout Error</label>
            </value>
            <value>
                <fullName>Pulser Over Voltage</fullName>
                <label>Pulser Over Voltage Error</label>
            </value>
            <value>
                <fullName>StartUp Repair</fullName>
                <label>StartUp Repair Error</label>
            </value>
            <value>
                <fullName>System Failure Alarm</fullName>
            </value>
            <value>
                <fullName>Power Supply Failure</fullName>
            </value>
            <value>
                <fullName>Software Image Failure</fullName>
            </value>
            <value>
                <fullName>Watchdog Failure</fullName>
            </value>
            <value>
                <fullName>12C Communication Failure</fullName>
                <label>I2C Communication Failure</label>
            </value>
            <value>
                <fullName>Failure to connect to electronic module</fullName>
            </value>
            <value>
                <fullName>Other ECG Error</fullName>
            </value>
            <value>
                <fullName>Voltage Error</fullName>
            </value>
            <value>
                <fullName>Battery Error</fullName>
            </value>
            <value>
                <fullName>Power Error</fullName>
            </value>
            <value>
                <fullName>Coil Gain Failure</fullName>
            </value>
            <value>
                <fullName>DSP Communication Error</fullName>
            </value>
            <value>
                <fullName>Database Error</fullName>
            </value>
            <value>
                <fullName>Ultrasound Communication Failure</fullName>
            </value>
            <value>
                <fullName>Power On Self-Test (POST) Error</fullName>
            </value>
            <value>
                <fullName>Printer Error</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>