fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/List_specific_IABP_Alarms__c.field-meta.xml
<CustomField>
    <fullName>List_specific_IABP_Alarms__c</fullName>
    <label>List specific IABP alarms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>