fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to lock down Approved Complaints with a TC#.</description>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>