fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    <inlineHelpText>Provide the lot number of the complaint device. If the lot number is unavailable, write unknown. Please only enter one LOT#</inlineHelpText>
    <label>Lot Number (ONLY ONE LOT#)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>