fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Lot_Number_Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number_Action_Taken__c</fullName>
    <inlineHelpText>Use the drop down list to choose the action taken to find out the lot number and serial number for the complaint product.</inlineHelpText>
    <label>Action Taken to Acquire Lot # / Serial #</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Called</fullName>
            </value>
            <value>
                <fullName>Emailed</fullName>
            </value>
            <value>
                <fullName>Requested on-site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>