fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Manta_Product__c.field-meta.xml
<CustomField>
    <fullName>Manta_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field added for Manta Complaint Process.</description>
    <label>Manta Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product_List__c.Description__c</field>
            <operation>contains</operation>
            <value>Manta,MANTA,manta</value>
        </filterItems>
        <filterItems>
            <field>Product_List__c.Product_Code__c</field>
            <operation>equals</operation>
            <value>2115,2156</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product_List__c</referenceTo>
    <relationshipLabel>Complaints (Manta Product)</relationshipLabel>
    <relationshipName>ComplaintsManta</relationshipName>
    <type>Lookup</type>
</CustomField>