fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Medical_History_Diagnosis_Medications__c.field-meta.xml
<CustomField>
    <fullName>Medical_History_Diagnosis_Medications__c</fullName>
    <inlineHelpText>Vital Signs: BP, Heart Rate, Resp Rate, ECG Rhythm</inlineHelpText>
    <label>Medical History/Diagnosis/Medications?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>