fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Medical_Intervention__c.field-meta.xml
<CustomField>
    <fullName>Medical_Intervention__c</fullName>
    <defaultValue>false</defaultValue>
    <description>THIS FIELD SHOULD NO LONGER BE USED!</description>
    <label>Medical Intervention</label>
    <type>Checkbox</type>
</CustomField>