fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Medical_Intervention_Required__c.field-meta.xml
<CustomField>
    <fullName>Medical_Intervention_Required__c</fullName>
    <inlineHelpText>Was a medical intervention (i.e. stenting, snaring, surgery, etc.) required to resolve the event?</inlineHelpText>
    <label>Medical Intervention Required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>