fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Medical_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Medical_Procedure__c</fullName>
    <label>Medical Procedure</label>
    <length>128</length>
    <type>Text</type>
</CustomField>