fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Most_recent_battery_check__c.field-meta.xml
<CustomField>
    <fullName>Most_recent_battery_check__c</fullName>
    <label>Most recent battery check?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>