fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Name_of_Device_User__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Device_User__c</fullName>
    <inlineHelpText>Enter the name of the person (physician, tech, nurse, etc.) who was using the device when the event occurred.</inlineHelpText>
    <label>Name of Device User</label>
    <length>25</length>
    <type>Text</type>
</CustomField>