fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Needle_length_used_for_insertion__c.field-meta.xml
<CustomField>
    <fullName>Needle_length_used_for_insertion__c</fullName>
    <inlineHelpText>REQUIRED for this Section</inlineHelpText>
    <label>Needle length used for insertion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>15 mm</fullName>
            </value>
            <value>
                <fullName>25 mm</fullName>
            </value>
            <value>
                <fullName>45 mm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>