fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <defaultValue>&quot;If the customer does not know the LOT Number, please put UNKNOWN in the LOT Number field.&quot;</defaultValue>
    <label>*Note:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>