fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/OnWarranty__c.field-meta.xml
<CustomField>
    <fullName>OnWarranty__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only for Anesthesia&apos;s Use</inlineHelpText>
    <label>On Warranty</label>
    <type>Checkbox</type>
</CustomField>