fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Other_Relevant_Information__c.field-meta.xml
<CustomField>
    <fullName>Other_Relevant_Information__c</fullName>
    <inlineHelpText>Describe any other information relevant to the event.</inlineHelpText>
    <label>Other Relevant Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>