fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Patient_complications_or_injury__c.field-meta.xml
<CustomField>
    <fullName>Patient_complications_or_injury__c</fullName>
    <description>Were there patient complications or injury?</description>
    <inlineHelpText>Were there patient complications or injury?</inlineHelpText>
    <label>Patient complications or injury?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>How_the_product_was_being_used__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>