fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Patient_exposed_to_infectious_disease__c.field-meta.xml
<CustomField>
    <fullName>Patient_exposed_to_infectious_disease__c</fullName>
    <inlineHelpText>i.e. Ebola, MRSA, Hepatitis Note: If yes, please do not return the device but provide images/photos indicating the reported alleged issue</inlineHelpText>
    <label>Patient exposed to infectious disease?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>How_the_product_was_being_used__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>