fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Patient_Identifier_i_e_file_number__c.field-meta.xml
<CustomField>
    <fullName>Patient_Identifier_i_e_file_number__c</fullName>
    <inlineHelpText>If available, please include the patient&apos;s file or medical identification number. DO NOT INCLUDE the patient&apos;s name, initials, or SSN.</inlineHelpText>
    <label>Patient Identifier (i.e. file number)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>