fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Patients_Condition__c.field-meta.xml
<CustomField>
    <fullName>Patients_Condition__c</fullName>
    <inlineHelpText>Select the patient&apos;s condition at the end of the reported event or procedure.</inlineHelpText>
    <label>Patient&apos;s Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Fine</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>