fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/PatientsCurrentConditionDescription__c.field-meta.xml
<CustomField>
    <fullName>PatientsCurrentConditionDescription__c</fullName>
    <description>This field is used to add details if needed based on the Patient&apos;s Current Condition.</description>
    <inlineHelpText>If &quot;Other&quot; or &quot;Unknown&quot; is selected for Patient&apos;s Current Condition, please describe the patient&apos;s condition.</inlineHelpText>
    <label>Patient&apos;s Condition Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>