fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <formula>Contact__r.Phone</formula>
    <label>Phone Number</label>
    <type>Text</type>
</CustomField>