fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Please_provide_rationale_for_answer_yes__c.field-meta.xml
<CustomField>
    <fullName>Please_provide_rationale_for_answer_yes__c</fullName>
    <description>Please a provide rationale for answering “No”</description>
    <inlineHelpText>Please a provide rationale for answering “No”</inlineHelpText>
    <label>Please provide rationale for answer  No</label>
    <type>TextArea</type>
</CustomField>