fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Please_provide_rationale_for_the_late_s__c.field-meta.xml
<CustomField>
    <fullName>Please_provide_rationale_for_the_late_s__c</fullName>
    <label>Provide rationale for late submission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>