fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Please_provide_rationale_for_Unknown__c.field-meta.xml
<CustomField>
    <fullName>Please_provide_rationale_for_Unknown__c</fullName>
    <description>Please provide rationale for Unknown</description>
    <inlineHelpText>Please provide rationale for Unknown whenever &apos;A Medical Intervention was performed&quot; is selected as Unknown.</inlineHelpText>
    <label>Please provide rationale for Unknown</label>
    <length>255</length>
    <type>Text</type>
</CustomField>