fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/PO_Invoice__c.field-meta.xml
<CustomField>
    <fullName>PO_Invoice__c</fullName>
    <label>PO/Invoice #</label>
    <length>64</length>
    <type>Text</type>
</CustomField>