fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Problem_s_involving_call__c.field-meta.xml
<CustomField>
    <fullName>Problem_s_involving_call__c</fullName>
    <description>Used in Cardiac Complaint Form</description>
    <label>Problem(s) involving call</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>