fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Procedure_discontinued_due_to_the_issue__c.field-meta.xml
<CustomField>
    <fullName>Procedure_discontinued_due_to_the_issue__c</fullName>
    <label>Procedure discontinued due to the issue?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>